# ask-llm.py

./: .gitignore  Readme.md  ask-llm.py  pyproject.toml
ai/: DESIGN.md
prompt-lib/: literature-exploration.md  review.md  review.txt  survey.md  test.md  thesis.md
src/ask_llm/: __init__.py  analyzer.py  api.py  bibtex.py  cli.py  config.py  document_processor.py  pdf_finder.py  pdf_search.py  reports.py  search_strategy.py  semantic_scholar.py  semantic_scholar_processor.py  url_resolver.py
src/ask_llm/search_engines/: __init__.py  base.py  google_grounding.py  qwant.py
