[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-llm"
version = "1.0.0"
description = "Process PDF files and BibTeX bibliographies using the Gemini API"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.28.0",
  "bibtexparser>=1.4.0",
  "typer>=0.9.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "rich>=13.0.0",
  "requests-cache>=1.2.1",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
ask-llm = "ask_llm.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
